# moscow_hack

./: .env  .gitignore  CLAUDE.md  README.md  development.md  docker-compose.cpu.yml  docker-compose.gpu.yml  docker-compose.override.yml  docker-compose.yml  old_readme.md  tooling.md
.claude/: settings.json
backend/: pyproject.toml
backend/app/: celery_client.py  main.py  models.py
backend/app/alembic/versions/: 4f04eccae12c_add_dicom_models_for_medical_image_.py  (+3 more)
backend/app/api/: main.py
backend/app/core/: config.py
backend/app/services/: dicom_service.py  inference_service.py  minio_service.py
backend/app/tests/: conftest.py
backend/scripts/: seed_inference_models.py
data/models/: README.md
data/reports/: README.md
data/studies/: README.md
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/client/: sdk.gen.ts  types.gen.ts
frontend/src/hooks/: useAuth.ts
frontend/src/routes/: login.tsx
frontend/src/types/: animations.ts
frontend/src/utils/: userHistory.ts
inference-service/: .dockerignore  Dockerfile.cpu  Dockerfile.gpu  README.md  pyproject.cpu.toml  pyproject.toml
inference-service/app/: __init__.py  config.py  db_models.py  tasks.py  worker.py
inference-service/app/models/: __init__.py  model_loader.py
inference-service/app/pipeline/: __init__.py  inference.py  model_configs.py  postprocessor.py  preprocessor.py
scripts/: README_BULK_INFERENCE.md  bulk_inference.py  cleanup_incomplete_studies.py  convert_zip_dicom_to_nifti.py  generate-client.sh  report_generator.py  requirements.txt
(+27 files in other folders)
